kubernetes-v2/personal/applications/example/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: whoami
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
