kubernetes-v2/personal/applications/example/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: whoami
  namespace: default

spec:
  # externalTrafficPolicy: Local
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
