kubernetes-v2/personal/applications/example/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: whoami-http
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.agrrh.com`)
      # middlewares:
      #   - name: whitelist
      #     namespace: kube-system
      services:
        - kind: Service
          name: whoami
          namespace: default
          port: 80
